cmake_minimum_required(VERSION 3.0.0)
project(cpp VERSION 0.1.0 LANGUAGES C CXX)
include(CTest)
enable_testing()

include_directories("tarlib/include")
find_package(ZLIB REQUIRED)
find_package(CURL REQUIRED)
#add_executable(cpp main.cpp)
add_executable(cpp main.cpp "tarlib/include/tarlib/inflate.h" "tarlib/include/tarlib/tarlib.h" "tarlib/src/tarlib.cpp")
#target_include_directories(cpp PUBLIC "libarchive/libarchive")

#target_link_libraries(cpp ${ARCHIVE})
target_link_libraries(cpp CURL::libcurl)
target_link_libraries(cpp ZLIB::ZLIB)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
