cmake_minimum_required(VERSION 3.0.0)
project(dataset-dinov2 VERSION 0.1.0 LANGUAGES C CXX)
include(CTest)
enable_testing()

include_directories("tarlib/include")
find_package(ZLIB REQUIRED)
find_package(CURL REQUIRED)
#add_executable(dataset-dinov2 main.cpp)
add_executable(dataset-dinov2 main.cpp "tarlib/include/tarlib/inflate.h" "tarlib/include/tarlib/tarlib.h" "tarlib/src/tarlib.cpp")
#target_include_directories(dataset-dinov2 PUBLIC "libarchive/libarchive")

#target_link_libraries(dataset-dinov2 ${ARCHIVE})
target_link_libraries(dataset-dinov2 CURL::libcurl)
target_link_libraries(dataset-dinov2 ZLIB::ZLIB)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
